--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,14 +2,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.shaily.chooseyourmatch">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:name=".MatchApplication"
         android:theme="@style/Theme.ChooseYourMatch">
-        <activity android:name=".MainActivity">
+        <activity android:name=".ChooseMatchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
