--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,25 @@ buildscript {
     }
 }
 
+ext{
+    android_core_version = "1.3.2"
+    android_appcompat_version = "1.2.0"
+    android_material_version = "1.3.0"
+    android_constraintlayout_version = "2.0.4"
+    junit_version = "4.13.2"
+    test_juint_version = "1.1.2"
+    espresso_version = "3.3.0"
+    glide_version = "4.11.0"
+    room_version = "2.2.6"
+    dagger_hilt_version = "2.31-alpha"
+    hilt_lifecycle_version = "1.0.0-alpha03"
+    coroutines_version = "1.4.2"
+    retrofit_version = "2.9.0"
+    livedata_version = "2.3.0"
+    fragment_version = "1.3.1"
+    architectural_components_version = "2.2.0"
+}
+
 allprojects {
     repositories {
         google()
