--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,7 +72,7 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${rootProject.ext.coroutines_version}"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:${rootProject.ext.coroutines_version}"
 
-    // Retrofit + GSON
+    // Retrofit + Gson
     implementation "com.squareup.retrofit2:retrofit:${rootProject.ext.retrofit_version}"
     implementation "com.squareup.retrofit2:converter-gson:${rootProject.ext.retrofit_version}"
 
